--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
